Added task code

--- a/Papiea-design.org
+++ b/Papiea-design.org
@@ -557,7 +557,7 @@ Papiea is aimed to be a reference implementation of a formal general purpose int
           procedures.register(sig, callbackUrl)
       }
     #+END_SRC
-*** RBCA
+*** RBCA - test
 *** Scalability and Reliability
 **** Leader election
 **** Fault tolerance
@@ -598,10 +598,80 @@ Papiea is aimed to be a reference implementation of a formal general purpose int
    progress in terms of how many fields are left of the total fields. The intent engine will have to
    query pending tasks periodically to see if work has to be restarted.
    
+   - TODO: What if a before a spec version has made a change to modify
+     a field's value, a new spec change arrived that reverted the
+     field's value to its value before the first spec change? This
+     will cause status to never be updated because there is no
+     difference between spec and status, but there is a task still
+     listening.. Need to think about this
+   
    #+Name: task-pc
    #+BEGIN_SRC go
-     func () newTask() {
-	
+     func (papiea papiea) newTask(entity entityReference, spec spec) {
+         // Get the status of the entity we are trying to change.
+         status,err = papiea.statusDb.getStatus(entity)
+
+
+         // Calculate the delta between the spec and the status. calc_delta
+         // will take into consideration all registered SFS for the
+         // entity's kind in order to know how to diff on vector
+         // elements. See more details in calc_delta. Each delta found will
+         // record the corresponding SFS that could is registered which
+         // should be able to resolve the diff
+         delta = calc_delta(spec, status)
+
+         // we are the task
+         task = this
+
+         // Register all the relevant deltas we could listen on
+         task.registerDelta(delta)
+
+         for (field in delta) {
+             // TBD: define on, define context
+             fieldListener = papiea.on(field.sfs, func(context, updatedEntity entityReference, status status){
+                 newValue = status.get(field.path)
+                 specValue = spec.get(field.path)
+
+                 if (newValue == specValue) {
+                     // Update the task that this field in the delta is a success
+                     task.updateFieldStatus(field, "Success")
+
+                     // Stopping this listener
+                     task.removeFieldListener(this)
+                 }
+                 else if (entity.metadata.specVersion == updatedEntity.metadata.specVersion) {
+                     // We got a different value, but still on the same spec version, dont do anything yet
+                     // Add to audit
+                     // Perhaps note this in some TTL
+                 }
+                 else {
+                     // We got a different value AND the spec version has increased (it can only increase)
+
+                     // update the task that this field is outdated by a particular spec version
+                     task.updateFieldStatus(field, "Outdated by " + updatedEntity.metadata.specVersion)
+
+                     // Stopping this listener
+                     task.removeFieldListener(this)
+                 }
+
+                 task.verifyCompletness()
+             })
+
+             task.addFieldListener(fieldListener)
+         }
+     }
+
+     func (papiea papiea) verifyCompletness() {
+         if (task.noMoreFieldListeners()) {
+             if (task.specDidNotRegister()) {
+                 task.setStatus("Spec did not manage to be atomically committed. Try again.")
+             }
+             else if (task.hasFailedFields()) {
+                 task.setStatus("Partially Completed")
+             } else {
+                 task.setStatus("Completed Successfully")
+             }
+         }
      }
    #+END_SRC
 ** Provider Library
